# pyfroc

./: .gitignore  README.md  pyproject.toml  setup.py
pyfroc/: pyfroc.py
samples/: tutorial2.ipynb
src/pyfroc/: __about__.py  __init__.py  __main__.py  coords.py  keys.py  pyfroc.py  sample.py  signals.py  utils.py
src/pyfroc/loaders/: __init__.py  base_loader.py  seg_nrrd.py
src/pyfroc/raters/: __init__.py  base_rater.py  nearest_pair_rater.py  within_lesion_rater.py
src/pyfroc/writers/: __init__.py  base_writer.py  response_lesion_images.py  rjafroc.py
